src/atlas_c/atlas_frontend/parser/mod.rs
//todo: Add Parser::sync() to recover from errors
pub mod arena;
pub mod ast;
pub mod error;

use miette::NamedSource;

use crate::atlas_c::{
    atlas_frontend::parser::{
        ast::{
            AstArg, AstAssociatedType, AstAssociatedTypeProjection, AstAtomicType, AstConcept,
            AstEnum, AstEnumVariant, AstExtendBlock, AstFlag, AstGlobalConst, AstInlineArrayType,
            AstListLiteralWithSize, AstMethodSignature, AstNullLiteral, AstObjLiteralExpr,
            AstObjLiteralField, AstOperatorOverloadSignature, AstPtrTy, AstStdGenericConstraint,
            AstUnion, AstVariadicType,
        },
        error::{
            ConstTypeNotSupportedYetError, DestructorWithParametersError, FlagDoesntExistError,
            MissPlacedCommentError, OnlyOneDestructorAllowedError, ParseResult, SyntaxError,
            UnexpectedTokenError,
        },
    },
    utils,
};
use ast::{
    AstAssignStmt, AstBinaryOp, AstBinaryOpExpr, AstBlock, AstBooleanLiteral, AstBooleanType,
    AstCallExpr, AstConst, AstExpr, AstExternFunction, AstFieldAccessExpr, AstFloatLiteral,
    AstFloatType, AstFunction, AstFunctionType, AstIdentifier, AstIfElseExpr, AstImport,
    AstIntegerLiteral, AstIntegerType, AstItem, AstLet, AstLiteral, AstNamedType, AstNamespace,
    AstObjField, AstProgram, AstReturnStmt, AstStatement, AstStringLiteral, AstStringType, AstType,
    AstUnaryOp, AstUnaryOpExpr, AstUnitType, AstUnsignedIntegerLiteral, AstUnsignedIntegerType,
    AstWhileExpr,
};

use crate::atlas_c::atlas_frontend::lexer::{
    Spanned, TokenVec,
    token::{Token, TokenKind},
};
use crate::atlas_c::atlas_frontend::parser::ast::{
    AstCastingExpr, AstCharLiteral, AstCharType, AstDeleteObjExpr, AstDestructor, AstGeneric,
    AstGenericConstraint, AstGenericType, AstIndexingExpr, AstListLiteral, AstMethod,
    AstMethodAttribute, AstMethodModifier, AstNullablePredicateSemantics, AstNullableType,
    AstOperatorOverload, AstSliceType, AstStaticAccessExpr, AstStruct, AstThisLiteral, AstThisType,
    AstUnitLiteral, AstVisibility,
};
use crate::atlas_c::utils::{Span, get_file_content};
use arena::AstArena;

pub struct Parser<'ast> {
    arena: &'ast AstArena<'ast>,
    tokens: Vec<Token>,
    //for error reporting
    file_path: &'static str,
    pos: usize,
}

enum ParsedItemAttribute<'ast> {
    Flag(AstFlag),
    CName(&'ast str),
    Nullable(Span),
}

pub fn remove_comments(tokens: Vec<Token>) -> Vec<Token> {
    tokens
        .into_iter()
        .filter(|t| !matches!(t.kind(), TokenKind::Comments(_)))
        .collect()
}

impl<'ast> Parser<'ast> {
    pub fn new(
        arena: &'ast AstArena<'ast>,
        tokens: Vec<Token>,
        file_path: &'static str,
    ) -> Parser<'ast> {
        let tokens = remove_comments(tokens);
        Parser {
            arena,
            tokens,
            file_path,
            pos: 0,
        }
    }

    fn parse_operator_constraint_name(
        &self,
        op_name: &str,
        span: &Span,
    ) -> ParseResult<AstGenericConstraint<'ast>> {
        let op = match op_name {
            "add" => AstBinaryOp::Add,
            "sub" => AstBinaryOp::Sub,
            "mul" => AstBinaryOp::Mul,
            "div" => AstBinaryOp::Div,
            "mod" => AstBinaryOp::Mod,
            "equal" => AstBinaryOp::Eq,
            "not_equal" => AstBinaryOp::NEq,
            "less" => AstBinaryOp::Lt,
            "less_equal" => AstBinaryOp::Lte,
            "greater" => AstBinaryOp::Gt,
            "greater_equal" => AstBinaryOp::Gte,
            "and" => AstBinaryOp::And,
            "or" => AstBinaryOp::Or,
            "shl" => AstBinaryOp::ShL,
            "shr" => AstBinaryOp::ShR,
            "bin_and" => AstBinaryOp::BinAnd,
            "bin_or" => AstBinaryOp::BinOr,
            "bin_xor" => AstBinaryOp::BinXor,
            // Unary operators are intentionally unsupported in generic constraints for now.
            "neg" | "not" | "as_ref" | "de_ref" => {
                return Err(self.unexpected_token_error(
                    TokenVec(vec![TokenKind::Identifier(
                        "binary operator name (e.g. add, less, bin_and)".to_string(),
                    )]),
                    span,
                ));
            }
            _ => {
                return Err(self.unexpected_token_error(
                    TokenVec(vec![TokenKind::Identifier(
                        "operator name (e.g. add, less_equal, bin_xor)".to_string(),
                    )]),
                    span,
                ));
            }
        };

        Ok(AstGenericConstraint::Operator { op, span: *span })
    }

    fn current(&self) -> &Token {
        &self.tokens[self.pos]
    }

    fn peek(&self) -> Option<TokenKind> {
        self.tokens.get(self.pos + 1).map(|t| t.kind())
    }

    fn peek_at(&self, offset: usize) -> Option<TokenKind> {
        self.tokens.get(self.pos + offset).map(|t| t.kind())
    }

    /// Check if the current `{` token starts an object literal.
    /// Supports both non-empty (`{ .field = value }`) and empty (`{}`) object literals.
    fn looks_like_obj_literal(&self) -> bool {
        if self.current().kind() != TokenKind::LBrace {
            return false;
        }
        if let Some(next_kind) = self.peek() {
            return matches!(next_kind, TokenKind::Dot | TokenKind::RBrace);
        }
        false
    }

    /// Check if the current `<` token looks like the start of a generic function call
    /// by doing a simple lookahead to see if it's followed by type-like tokens and `>`
    fn looks_like_generic_call(&self) -> bool {
        if self.current().kind() != TokenKind::LAngle {
            return false;
        }

        // Scan ahead to find matching `>` and check if `(` follows
        // This handles nested generics like `Box<Result<Vector<i64>, Error>>`
        let mut depth = 0;
        let mut bracket_depth = 0;
        let mut offset = 1;

        // Scan ahead to find the matching `>`
        while let Some(kind) = self.peek_at(offset) {
            match kind {
                TokenKind::LAngle => depth += 1,
                TokenKind::RAngle => {
                    if depth == 0 {
                        // Found matching `>`, check if this can be used as a generic suffix.
                        // This includes calls (`foo<T>(...)`), static access (`Foo<T>::bar`),
                        // object literals (`Foo<T> {...}`), and standalone generic refs (`foo<T>`).
                        return matches!(
                            self.peek_at(offset + 1),
                            Some(TokenKind::LParen)
                                | Some(TokenKind::DoubleColon)
                                | Some(TokenKind::LBrace)
                                | Some(TokenKind::Semicolon)
                                | Some(TokenKind::Comma)
                                | Some(TokenKind::RParen)
                                | Some(TokenKind::RBracket)
                                | Some(TokenKind::RBrace)
                                | Some(TokenKind::EoI)
                        );
                    }
                    depth -= 1;
                }
                TokenKind::LBracket => {
                    bracket_depth += 1;
                }
                TokenKind::RBracket => {
                    bracket_depth -= 1;
                }
                // In some cases, like size_of<[int64; N]>(), we should check if we are at l_bracket_depth > 1;
                // TODO: There might still be some weirdly ambiguous posibility.
                TokenKind::Semicolon if bracket_depth == 0 => {
                    // In this case, we are sure
                    return false;
                }
                // If we hit tokens that definitely indicate this is not a generic type, bail out
                TokenKind::RBrace => return false,
                // Comparison operators are unlikely in generic type parameters
                TokenKind::OpGreaterThanEq
                | TokenKind::LFatArrow
                | TokenKind::EqEq
                | TokenKind::NEq => return false,
                _ => {}
            }
            offset += 1;
            // Increase limit to handle deeply nested generics like Box<Result<Vector<Box<i64>>, Error>>
            if offset > 100 {
                return false;
            }
        }
        false
    }

    /// This should maybe return a ParseResult::UnexpectedEndOfFileError
    fn advance(&mut self) -> Token {
        let tok = self.tokens.get(self.pos).cloned();
        if let Some(t) = tok {
            self.pos += 1;
            t
        } else {
            Token::new(
                Span {
                    start: self.pos,
                    end: self.pos,
                    path: self.file_path,
                },
                TokenKind::EoI,
            )
        }
    }

    fn expect(&mut self, kind: TokenKind) -> ParseResult<Token> {
        let current_span = self.current().span;
        let tok = self.advance();
        if tok.kind() == kind {
            Ok(tok)
        } else {
            Err(self.unexpected_token_error(TokenVec(vec![kind]), &current_span))
        }
    }

    fn eat_until<F, T>(&mut self, kind: TokenKind, f: F) -> ParseResult<Vec<T>>
    where
        F: Fn(&mut Parser<'ast>) -> ParseResult<T>,
    {
        let mut items = Vec::new();
        while self.current().kind() != kind {
            items.push(f(self)?);
        }
        Ok(items)
    }

    fn eat_if<F, T>(&mut self, kind: TokenKind, f: F, or: T) -> ParseResult<T>
    where
        F: Fn(&mut Parser<'ast>) -> ParseResult<T>,
    {
        if self.current().kind() == kind {
            let _ = self.advance();
            f(self)
        } else {
            Ok(or)
        }
    }

    pub fn parse(&mut self) -> ParseResult<AstProgram<'ast>> {
        let mut items: Vec<AstItem> = Vec::new();
        while self.current().kind() != TokenKind::EoI {
            let item = self.parse_item();
            match item {
                Err(e) => {
                    if let SyntaxError::MissPlacedComment(_) = &*e {
                        continue;
                    } else {
                        return Err(e);
                    }
                }
                Ok(i) => items.push(i),
            }
        }

        let node = AstProgram {
            items: self.arena.alloc_vec(items),
        };
        Ok(node)
    }

    fn parse_item(&mut self) -> ParseResult<AstItem<'ast>> {
        let current_tok = self.current();
        match current_tok.kind() {
            TokenKind::KwImport => Ok(AstItem::Import(self.parse_import()?)),
            TokenKind::KwNamespace => Ok(AstItem::Namespace(self.parse_namespace()?)),
            TokenKind::KwExtern => {
                let _ = self.advance();
                let language = match self.current().kind() {
                    TokenKind::StringLiteral(lang) => {
                        let lang_str = lang;
                        let _ = self.advance();
                        self.arena.alloc(lang_str) as &'ast str
                    }
                    _ => {
                        // Default to C if no language specified
                        "C"
                    }
                };
                match self.current().kind() {
                    TokenKind::KwFunc => {
                        let mut func = self.parse_extern_function()?;
                        func.language = language;
                        Ok(AstItem::ExternFunction(func))
                    }
                    TokenKind::KwStruct => Ok(AstItem::ExternStruct(self.parse_extern_struct()?)),
                    TokenKind::KwUnion => Ok(AstItem::ExternUnion(self.parse_extern_union()?)),
                    TokenKind::KwEnum => Ok(AstItem::ExternEnum(self.parse_extern_enum()?)),
                    _ => Err(self.unexpected_token_error(
                        TokenVec(vec![
                            TokenKind::KwFunc,
                            TokenKind::KwStruct,
                            TokenKind::KwUnion,
                        ]),
                        &self.current().span(),
                    )),
                }
            }
            TokenKind::KwFunc => Ok(AstItem::Function(self.parse_func()?)),
            TokenKind::KwStruct => Ok(AstItem::Struct(self.parse_struct()?)),
            TokenKind::KwConcept => Ok(AstItem::Concept(self.parse_concept()?)),
            TokenKind::KwExtend => Ok(AstItem::Extend(self.parse_extend_block()?)),
            TokenKind::KwUnion => Ok(AstItem::Union(self.parse_union()?)),
            TokenKind::KwEnum => Ok(AstItem::Enum(self.parse_enum()?)),
            TokenKind::KwConst => {
                let c = self.parse_const()?;
                /*if !matches!(c.ty, AstType::Const(_)) {
                    c.ty = self.arena.alloc(AstType::Const(c.ty))
                }*/
                self.expect(TokenKind::Semicolon)?;
                let c = AstItem::Constant(AstGlobalConst {
                    span: c.span,
                    name: c.name,
                    ty: c.ty,
                    value: c.value,
                    vis: AstVisibility::default(),
                    docstring: None,
                    is_extern: false,
                });
                Ok(c)
            }
            TokenKind::KwPublic => {
                let _ = self.advance();
                let mut item = self.parse_item()?;
                item.set_vis(AstVisibility::Public);
                Ok(item)
            }
            TokenKind::KwPrivate => {
                let _ = self.advance();
                let mut item = self.parse_item()?;
                item.set_vis(AstVisibility::Private);
                Ok(item)
            }
            TokenKind::Hash => {
                let attribute = self.parse_item_attribute()?;
                let mut item = self.parse_item()?;
                match attribute {
                    ParsedItemAttribute::Flag(flag) => {
                        item.set_flag(flag);
                        Ok(item)
                    }
                    ParsedItemAttribute::CName(c_name) => {
                        item.set_c_name(c_name);
                        Ok(item)
                    }
                    ParsedItemAttribute::Nullable(nullable_span) => match item {
                        AstItem::Struct(_) | AstItem::ExternStruct(_) => {
                            item.set_nullable_marker(nullable_span);
                            Ok(item)
                        }
                        _ => Err(self.unexpected_token_error(
                            TokenVec(vec![TokenKind::KwStruct]),
                            &item.span(),
                        )),
                    },
                }
            }
            TokenKind::Docs(doc) => {
                let _ = self.advance();
                let mut item = self.parse_item()?;
                item.set_docstring(self.arena.alloc(doc), self.arena);
                Ok(item)
            }
            TokenKind::Comments(_) => {
                let path = current_tok.span.path;
                let src = utils::get_file_content(path)
                    .unwrap_or_else(|_| panic!("Failed to open file content {path}"));
                Err(Box::new(SyntaxError::MissPlacedComment(
                    MissPlacedCommentError {
                        span: current_tok.span,
                        src: NamedSource::new(path, src),
                    },
                )))
            }
            //Handling comments
            _ => Err(self.unexpected_token_error(
                TokenVec(vec![TokenKind::Identifier("Item".to_string())]),
                &self.current().span(),
            )),
        }
    }

    fn parse_namespace(&mut self) -> ParseResult<AstNamespace<'ast>> {
        let start = self.expect(TokenKind::KwNamespace)?.span;
        let name = self.parse_identifier()?;
        self.expect(TokenKind::LBrace)?;

        let mut items = vec![];
        while self.current().kind() != TokenKind::RBrace {
            items.push(self.parse_item()?);
        }

        let end = self.expect(TokenKind::RBrace)?.span;
        Ok(AstNamespace {
            span: Span::union_span(&start, &end),
            name: self.arena.alloc(name),
            items: self.arena.alloc_vec(items),
            vis: AstVisibility::default(),
            docstring: None,
        })
    }

    fn parse_attribute_path(&mut self) -> ParseResult<(String, Span)> {
        let first_segment = match self.current().kind() {
            TokenKind::Identifier(s) => {
                let span = self.advance().span;
                (s, span)
            }
            _ => {
                return Err(self.unexpected_token_error(
                    TokenVec(vec![TokenKind::Identifier("attribute".to_string())]),
                    &self.current().span(),
                ));
            }
        };

        let mut path_parts = vec![first_segment.0];
        let mut end_span = first_segment.1;

        while self.current().kind() == TokenKind::DoubleColon {
            let _ = self.advance();
            match self.current().kind() {
                TokenKind::Identifier(s) => {
                    end_span = self.advance().span;
                    path_parts.push(s);
                }
                _ => {
                    return Err(self.unexpected_token_error(
                        TokenVec(vec![TokenKind::Identifier("attribute segment".to_string())]),
                        &self.current().span(),
                    ));
                }
            }
        }

        Ok((
            path_parts.join("::"),
            Span::union_span(&first_segment.1, &end_span),
        ))
    }

    fn parse_item_attribute(&mut self) -> ParseResult<ParsedItemAttribute<'ast>> {
        self.expect(TokenKind::Hash)?;
        self.expect(TokenKind::LBracket)?;

        let (attribute_path, attribute_span) = self.parse_attribute_path()?;

        let parsed_attribute = match attribute_path.as_str() {
            "c_name" => {
                self.expect(TokenKind::LParen)?;
                let c_name = match self.current().kind() {
                    TokenKind::StringLiteral(s) => {
                        let value = self.arena.alloc(s);
                        let _ = self.advance();
                        value
                    }
                    _ => {
                        return Err(self.unexpected_token_error(
                            TokenVec(vec![TokenKind::StringLiteral("name_in_c".to_string())]),
                            &self.current().span(),
                        ));
                    }
                };
                self.expect(TokenKind::RParen)?;
                ParsedItemAttribute::CName(c_name)
            }
            "std::nullable" => ParsedItemAttribute::Nullable(attribute_span),
            "std::copyable" => ParsedItemAttribute::Flag(AstFlag::Copyable(attribute_span)),
            "std::default" => ParsedItemAttribute::Flag(AstFlag::Default(attribute_span)),
            "std::hashable" => ParsedItemAttribute::Flag(AstFlag::Hashable(attribute_span)),
            "std::non_copyable" => ParsedItemAttribute::Flag(AstFlag::NonCopyable(attribute_span)),
            "std::trivially_copyable" => {
                ParsedItemAttribute::Flag(AstFlag::TriviallyCopyable(attribute_span))
            }
            "core::intrinsic" => ParsedItemAttribute::Flag(AstFlag::Intrinsic(attribute_span)),
            _ if attribute_path.starts_with("std::") || attribute_path.starts_with("core::") => {
                return Err(Box::new(SyntaxError::FlagDoesntExist(
                    FlagDoesntExistError {
                        span: self.current().span,
                        src: NamedSource::new(
                            self.current().span.path,
                            get_file_content(self.current().span.path)
                                .expect("Failed to get source content for error reporting"),
                        ),
                        flag_name: attribute_path,
                    },
                )));
            }
            _ => {
                return Err(self.unexpected_token_error(
                    TokenVec(vec![TokenKind::Identifier(
                        "c_name|std::nullable|std::copyable|std::default|std::hashable|std::non_copyable|std::trivially_copyable|core::intrinsic"
                            .to_string(),
                    )]),
                    &self.current().span(),
                ));
            }
        };

        self.expect(TokenKind::RBracket)?;
        Ok(parsed_attribute)
    }

    fn parse_method_attribute(&mut self) -> ParseResult<AstMethodAttribute> {
        self.expect(TokenKind::Hash)?;
        self.expect(TokenKind::LBracket)?;
        let start_span = self.expect(TokenKind::Identifier("std".to_string()))?.span;
        self.expect(TokenKind::DoubleColon)?;

        let attribute = match self.current().kind() {
            TokenKind::Identifier(ref s) if s == "nullable_guarded" => {
                let end_span = self.advance().span;
                AstMethodAttribute::NullableGuarded(Span::union_span(&start_span, &end_span))
            }
            TokenKind::Identifier(ref s) if s == "nullable_infallible" => {
                let end_span = self.advance().span;
                AstMethodAttribute::NullableInfallible(Span::union_span(&start_span, &end_span))
            }
            TokenKind::Identifier(ref s) if s == "nullable_predicate" => {
                let mut end_span = self.advance().span;
                let mut semantics = AstNullablePredicateSemantics::Empty;
                if self.current().kind() == TokenKind::LParen {
                    self.expect(TokenKind::LParen)?;
                    semantics = match self.current().kind() {
                        TokenKind::Identifier(ref s) if s == "empty" => {
                            end_span = self.advance().span;
                            AstNullablePredicateSemantics::Empty
                        }
                        TokenKind::Identifier(ref s) if s == "present" => {
                            end_span = self.advance().span;
                            AstNullablePredicateSemantics::Present
                        }
                        _ => {
                            return Err(self.unexpected_token_error(
                                TokenVec(vec![TokenKind::Identifier("empty|present".to_string())]),
                                &self.current().span(),
                            ));
                        }
                    };
                    self.expect(TokenKind::RParen)?;
                }
                AstMethodAttribute::NullablePredicate {
                    span: Span::union_span(&start_span, &end_span),
                    semantics,
                }
            }
            _ => {
                return Err(self.unexpected_token_error(
                    TokenVec(vec![TokenKind::Identifier(
                        "std::nullable_predicate|std::nullable_guarded|std::nullable_infallible"
                            .to_string(),
                    )]),
                    &self.current().span(),
                ));
            }
        };

        self.expect(TokenKind::RBracket)?;
        Ok(attribute)
    }

    fn parse_enum(&mut self) -> ParseResult<AstEnum<'ast>> {
        self.expect(TokenKind::KwEnum)?;
        let enum_identifier = self.parse_identifier()?;
        self.expect(TokenKind::LBrace)?;
        let mut variants = vec![];
        let mut variant_value: u64 = 0;
        while self.current().kind() != TokenKind::RBrace {
            let variant_name = self.parse_identifier()?;
            let value = if self.current().kind() == TokenKind::OpAssign {
                let _ = self.advance();
                match self.current().kind() {
                    TokenKind::Integer(val) => {
                        let _ = self.advance();
                        val as u64
                    }
                    TokenKind::UnsignedInteger(val) => {
                        let _ = self.advance();
                        val
                    }
                    _ => {
                        return Err(self.unexpected_token_error(
                            TokenVec(vec![TokenKind::Integer(0), TokenKind::UnsignedInteger(0)]),
                            &self.current().span(),
                        ));
                    }
                }
            } else {
                let val = variant_value;
                variant_value += 1;
                val
            };
            let variant = AstEnumVariant {
                span: variant_name.span,
                name: self.arena.alloc(variant_name),
                value,
                docstring: None,
            };
            variants.push(variant);
            if self.current().kind() == TokenKind::Semicolon {
                let _ = self.advance();
            }
        }
        let end_span = self.expect(TokenKind::RBrace)?.span;
        let node = AstEnum {
            span: Span::union_span(&enum_identifier.span, &end_span),
            name_span: enum_identifier.span,
            name: self.arena.alloc(enum_identifier),
            variants: self.arena.alloc_vec(variants),
            vis: AstVisibility::default(),
            docstring: None,
            is_extern: false,
        };
        Ok(node)
    }

    fn parse_destructor(
        &mut self,
        class_name: String,
        vis: AstVisibility,
    ) -> ParseResult<AstDestructor<'ast>> {
        let start_span = self.expect(TokenKind::Tilde)?.span;
        self.expect(TokenKind::Identifier(class_name))?;
        self.expect(TokenKind::LParen)?;
        let mut params = vec![];
        while self.current().kind() != TokenKind::RParen {
            params.push(self.parse_obj_field()?);
            if self.current().kind() == TokenKind::Comma {
                let _ = self.advance();
            }
        }
        self.expect(TokenKind::RParen)?;
        if !params.is_empty() {
            return Err(Box::new(SyntaxError::DestructorWithParameters(
                DestructorWithParametersError {
                    span: Span::union_span(&start_span, &self.current().span()),
                    src: NamedSource::new(
                        self.current().span.path,
                        get_file_content(self.current().span.path)
                            .expect("Failed to get source content for error reporting"),
                    ),
                },
            )));
        }
        let body = self.parse_block()?;
        let node = AstDestructor {
            span: Span::union_span(&start_span, &body.span),
            body: self.arena.alloc(body),
            vis,
            docstring: None,
        };
        Ok(node)
    }

    fn parse_union(&mut self) -> ParseResult<AstUnion<'ast>> {
        self.expect(TokenKind::KwUnion)?;
        let union_identifier = self.parse_identifier()?;

        let generics = self.eat_if(
            TokenKind::LAngle,
            |p| {
                let value = p.eat_until(TokenKind::RAngle, |parser| {
                    parser.eat_if(TokenKind::Comma, |_| Ok(()), ())?;
                    parser.parse_generic()
                });
                p.expect(TokenKind::RAngle)?;
                value
            },
            vec![],
        )?;

        self.expect(TokenKind::LBrace)?;
        let mut variants = vec![];
        let mut curr_vis = self.parse_current_vis(AstVisibility::Private)?;
        while self.current().kind() != TokenKind::RBrace {
            curr_vis = self.parse_current_vis(curr_vis)?;
            let mut obj_field = self.parse_obj_field()?;
            obj_field.vis = curr_vis;
            variants.push(obj_field);
            self.expect(TokenKind::Semicolon)?;
        }

        let end_span = self.expect(TokenKind::RBrace)?.span;

        let node = AstUnion {
            span: Span::union_span(&union_identifier.span, &end_span),
            generics: self.arena.alloc_vec(generics),
            name_span: union_identifier.span,
            name: self.arena.alloc(union_identifier),
            variants: self.arena.alloc_vec(variants),
            vis: AstVisibility::default(),
            docstring: None,
            is_extern: false,
            c_name: None,
        };
        Ok(node)
    }

    fn parse_extend_block(&mut self) -> ParseResult<AstExtendBlock<'ast>> {
        let start_span = self.expect(TokenKind::KwExtend)?.span;
        let ty = self.parse_type()?;
        self.expect(TokenKind::Identifier("with".to_string()))?;
        let concept = self.parse_type()?;
        let where_clause = if self.current().kind() == TokenKind::KwWhere {
            Some(self.arena.alloc_vec(self.parse_where_clause()?))
        } else {
            None
        };

        self.expect(TokenKind::LBrace)?;
        let mut methods = vec![];
        let mut operators = vec![];
        let mut associated_types = vec![];
        // Empty if there is none
        while self.current().kind() != TokenKind::RBrace {
            match self.current().kind() {
                TokenKind::KwOperator => {
                    operators.push(self.parse_operator()?);
                }
                TokenKind::KwFunc => {
                    methods.push(self.parse_method()?);
                }
                // Might be worth adding an actual keyword here to avoid confusion
                TokenKind::Identifier(name) if name == "type" => {
                    associated_types.push(self.parse_associated_type()?);
                }
                _ => {
                    return Err(self.unexpected_token_error(
                        TokenVec(vec![TokenKind::Identifier("Methods/Operator".to_string())]),
                        &self.current().span,
                    ));
                }
            }
        }
        self.expect(TokenKind::RBrace)?;

        let node = AstExtendBlock {
            span: Span::union_span(&start_span, &concept.span()),
            ty: self.arena.alloc(ty),
            concept: self.arena.alloc(concept),
            methods: self.arena.alloc_vec(methods),
            operators: self.arena.alloc_vec(operators),
            associated_types: self.arena.alloc_vec(associated_types),
            where_clause,
        };
        Ok(node)
    }

    fn parse_concept(&mut self) -> ParseResult<AstConcept<'ast>> {
        self.expect(TokenKind::KwConcept)?;
        let concept_identifier = self.parse_identifier()?;

        let generics = self.eat_if(
            TokenKind::LAngle,
            |p| {
                let value = p.eat_until(TokenKind::RAngle, |parser| {
                    parser.eat_if(TokenKind::Comma, |_| Ok(()), ())?;
                    parser.parse_generic()
                });
                p.expect(TokenKind::RAngle)?;
                value
            },
            vec![],
        )?;
        self.expect(TokenKind::LBrace)?;

        let mut implemented_methods = vec![];
        let mut required_methods = vec![];
        let mut implemented_operators = vec![];
        let mut required_operators = vec![];
        let mut associated_types = vec![];

        let mut pending_method_attributes: Vec<AstMethodAttribute> = vec![];
        let mut curr_vis = self.parse_current_vis(AstVisibility::Private)?;
        // Empty if there is none
        let mut docs = String::new();
        while self.current().kind() != TokenKind::RBrace {
            curr_vis = self.parse_current_vis(curr_vis)?;

            if self.current().kind() == TokenKind::Hash
                && self.peek() == Some(TokenKind::LBracket)
                && self.peek_at(2) == Some(TokenKind::Identifier("std".to_string()))
            {
                let attr = self.parse_method_attribute()?;
                pending_method_attributes.push(attr);
                continue;
            }

            match self.current().kind() {
                TokenKind::Identifier(name) if name == "type" => {
                    associated_types.push(self.parse_associated_type()?);
                }
                TokenKind::KwOperator => {
                    if !pending_method_attributes.is_empty() {
                        return Err(self.unexpected_token_error(
                            TokenVec(vec![TokenKind::KwFunc]),
                            &self.current().span(),
                        ));
                    }
                    let signature = self.parse_operator_signature()?;
                    if self.current().kind() == TokenKind::LBrace {
                        let body = self.parse_block()?;
                        implemented_operators.push(AstOperatorOverload {
                            signature,
                            body: self.arena.alloc(body),
                        });
                    } else {
                        self.expect(TokenKind::Semicolon)?;
                        required_operators.push(signature);
                    }
                }
                TokenKind::KwFunc => {
                    let mut signature = self.parse_method_signature()?;
                    signature.vis = curr_vis;
                    signature.attributes = self.arena.alloc_vec(pending_method_attributes.clone());
                    pending_method_attributes.clear();
                    signature.docstring = if !docs.is_empty() {
                        Some(self.arena.alloc(docs.clone()))
                    } else {
                        None
                    };
                    docs.clear();
                    if self.current().kind() == TokenKind::LBrace {
                        let body = self.parse_block()?;
                        implemented_methods.push(AstMethod {
                            signature,
                            body: self.arena.alloc(body),
                        });
                    } else {
                        self.expect(TokenKind::Semicolon)?;
                        required_methods.push(signature);
                    }
                }
                TokenKind::Docs(doc) => {
                    let _ = self.advance();
                    if docs.is_empty() {
                        docs = doc;
                    } else {
                        docs.push('\n');
                        docs.push_str(&doc);
                    }
                }
                _ => {
                    return Err(self.unexpected_token_error(
                        TokenVec(vec![TokenKind::Identifier(
                            "Field/Methods/Constant/Operator".to_string(),
                        )]),
                        &self.current().span,
                    ));
                }
            }
        }

        self.expect(TokenKind::RBrace)?;

        let node = AstConcept {
            span: Span::union_span(&concept_identifier.span, &self.current().span()),
            name_span: concept_identifier.span,
            name: self.arena.alloc(concept_identifier),
            generics: self.arena.alloc_vec(generics),
            implemented_methods: self.arena.alloc_vec(implemented_methods),
            required_methods: self.arena.alloc_vec(required_methods),
            implemented_operators: self.arena.alloc_vec(implemented_operators),
            required_operators: self.arena.alloc_vec(required_operators),
            associated_types: self.arena.alloc_vec(associated_types),
            vis: AstVisibility::default(),
            docstring: None,
            is_extern: false,
        };
        Ok(node)
    }

    fn parse_associated_type(&mut self) -> ParseResult<AstAssociatedType<'ast>> {
        let start = self.expect(TokenKind::Identifier("type".to_string()))?.span;
        let name = self.parse_identifier()?;
        let ty: Option<&'ast AstType<'ast>> = if self.current().kind() == TokenKind::OpAssign {
            let _ = self.advance();
            Some(self.arena.alloc(self.parse_type()?))
        } else {
            None
        };
        let end = self.expect(TokenKind::Semicolon)?.span;
        Ok(AstAssociatedType {
            span: Span::union_span(&start, &end),
            name_span: name.span,
            name: self.arena.alloc(name),
            ty,
        })
    }

    fn parse_struct(&mut self) -> ParseResult<AstStruct<'ast>> {
        self.expect(TokenKind::KwStruct)?;
        let struct_identifier = self.parse_identifier()?;

        let generics = self.eat_if(
            TokenKind::LAngle,
            |p| {
                let value = p.eat_until(TokenKind::RAngle, |parser| {
                    parser.eat_if(TokenKind::Comma, |_| Ok(()), ())?;
                    parser.parse_generic()
                });
                p.expect(TokenKind::RAngle)?;
                value
            },
            vec![],
        )?;

        self.expect(TokenKind::LBrace)?;
        let mut fields: Vec<AstObjField<'_>> = vec![];
        let mut destructor: Option<&'ast AstDestructor<'ast>> = None;
        let mut methods = vec![];
        let mut operators = vec![];
        let mut constants = vec![];
        let mut pending_method_attributes: Vec<AstMethodAttribute> = vec![];
        let mut curr_vis = self.parse_current_vis(AstVisibility::Private)?;
        // Empty if there is none
        let mut docs = String::new();
        while self.current().kind() != TokenKind::RBrace {
            curr_vis = self.parse_current_vis(curr_vis)?;

            if self.current().kind() == TokenKind::Hash
                && self.peek() == Some(TokenKind::LBracket)
                && self.peek_at(2) == Some(TokenKind::Identifier("std".to_string()))
            {
                let attr = self.parse_method_attribute()?;
                pending_method_attributes.push(attr);
                continue;
            }
